fix: text spacing
space

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,10 @@ mark {
     color: #F20751;
 }
 
+h1 {
+   letter-spacing: -1px;
+}
+
 h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -74,6 +78,7 @@ h2 {
 
 p {
     font-size: 1.1em;
+    letter-spacing: 1px;
 }
 
 video {
@@ -103,7 +108,7 @@ footer>p>a {
 }
 
 .paragraphBottomMargin {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .activeSection {
@@ -116,7 +121,7 @@ footer>p>a {
 }
 
 .h2TitleBottomSpacing {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .textToLeft {
